--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -7,6 +7,12 @@ jobs:
       matrix:
         node-version: [16, 18.17.0]
         operating-system: [ubuntu-latest, windows-latest]
+        include:
+          - node-version: 20
+            operating-system: ubuntu-latest
+        exclude:
+          - node-version: 16
+            operating-system: windows-latest
     runs-on: ${{ matrix.operating-system }}
     steps:
       - name: get code
